.deploy/paperless/paperless-redis-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-redis
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis:$REDIS
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redisdata
              mountPath: /data
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: redisdata
          nfs:
            server: 10.60.1.15
            path: /data/services/paperless/redis
