.deploy/paperless/paperless-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
