.deploy/paperless/paperless-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
