.deploy/paperless/paperless-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless-web
  ports:
    - name: http
      port: 8000
      targetPort: 8000
